@@ -4,6 +4,7 @@ Revision history for Perl extension String::Random.
         - Modify test.pl to use Test::More.
         - Build with Module::Build.
         - Minor whitespace cleanup.
+        - Avoid undefined results from randregex().
 
 0.20   Mon Sep 29 15:33:02 CDT 2003
         - Added support for *, +, and ? in regular expressions.
@@ -47,6 +48,6 @@ Revision history for Perl extension String::Random.
 0.1    Thu Sep 10 10:35:12 CDT 1998
         - original version
 
-$Id: Changes,v 1.10 2006/04/20 18:44:52 steve Exp $
+$Id: Changes,v 1.11 2006/04/20 19:54:29 steve Exp $
 
 # vi: set ai et:
